--- a/main.html
+++ b/main.html
@@ -10,6 +10,40 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<header>
+		<h1>Jab We Met (2007)</h1>
+	</header>
+	<nav>
+		<a href="https://en.wikipedia.org/wiki/Jab_We_Met" id="nav-actor">Actors</a>
+		<a href="https://www.pinkvilla.com/lifestyle/people/15-hilarious-dialogues-kareena-kapoor-khan-shahid-kapoor-starrer-jab-we-met-807500" id="nav-quote">Quotes</a>
+	</nav>
+	<summary>
+		<h2>Summary</h2>
+		<p>The film follows Aditya, a heartbroken businessman who meets Geet, a lively and talkative girl, on a train. She forces him to embrace life again as they embark on an unexpected journey. However, when circumstances change, their roles reverse, and Aditya helps Geet rediscover herself.</p>
+	</summary>
+	<section id="actor">
+		<h2>Actors</h2>
+		<ul>
+			<li>Shahid Kapoor as Aditya Kashyap</li>
+			<li>Kareena Kapoor as Geet Dhillon</li>
+		</ul>
+	</section>
+	<section id="quote">
+		<h2>Quotes</h2>
+		<ul>
+			<li>Tum ekdum sahi ja rahi ho, aur main ekdum galat ja raha hoon! – Aditya</li>
+			<li>Agar kisi cheez ko dil se chaho toh poori kainaat usse tumse milane ki koshish mein lag jaati hai.– Geet</li>
+		</ul>
+		
+	</section>
+	<aside>
+		<h2>Information about the IMDb rating and release date</h2>
+		<p><strong>IMDb rating</strong>7.9 out of 10</p>
+		<p><strong>Release date</strong> October 26, 2007.</p>
+	</aside>
+	<footer>
+		<p>Produced by:Dhilin Mehta.</p>
+	</footer>
 
 </body>
 
