--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<h1>Jab We Met (2007)</h1>
 	</header>
 	<nav>
-		<a href="https://en.wikipedia.org/wiki/Jab_We_Met" id="nav-actor">Actors</a>
+		<a href="#actor" id="nav-actor">Actors</a>
 		<a href="https://www.pinkvilla.com/lifestyle/people/15-hilarious-dialogues-kareena-kapoor-khan-shahid-kapoor-starrer-jab-we-met-807500" id="nav-quote">Quotes</a>
 	</nav>
 	<summary>
