--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 	</header>
 	<nav>
 		<a href="#actor" id="nav-actor">Actors</a>
-		<a href="https://www.pinkvilla.com/lifestyle/people/15-hilarious-dialogues-kareena-kapoor-khan-shahid-kapoor-starrer-jab-we-met-807500" id="nav-quote">Quotes</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
 	</nav>
 	<summary>
 		<h2>Summary</h2>
